fixed mat ripple overflow

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,9 +6,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 10px;
+  margin: 1px;
   .icon-container {
-    margin-top: 15px;
+    margin-top: 25px;
     .icon {
       font-size: 80px;
     }
@@ -18,6 +18,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    .sites-row {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
   }
 
   .learn-more-container {
